@@ -2,6 +2,9 @@ CMF 2.0.0-beta2 (unreleased)
 
   Bug Fixes
 
+    - PortalFolder: Content IDs starting with '@@' are now disallowed.
+      These names are reserved for browser views.
+
     - CMFDefault: Changed the way browser views are hooked up.
       To become independent of the lookup order views are now named different
       than the corresponding skin methods. The views are now enabled by
